fix alignment of headings

--- a/src/scss/schedule.scss
+++ b/src/scss/schedule.scss
@@ -10,6 +10,12 @@ h1 {
 	letter-spacing: 0em;
 	text-align: center;
 }
+h4 {
+	text-align: left;
+}
+p {
+	text-align: left;
+}
 .schedule {
 	.scheduleBox {
 		background-color: #f3f3f3;
